// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Match snapshot 1`] = `
"<Provider store={{...}}>
  <MemoryRouter initialEntries={{...}}>
    <Router history={{...}}>
      <Route component={[Function: HabitsRouter]}>
        <HabitsRouter history={{...}} location={{...}} match={{...}} staticContext={[undefined]}>
          <Route component={{...}}>
            <WithStyles(undefined) history={{...}} location={{...}} match={{...}} staticContext={[undefined]}>
              <Connect(HabitsPage) classes={{...}} history={{...}} location={{...}} match={{...}} staticContext={[undefined]}>
                <HabitsPage classes={{...}} history={{...}} location={{...}} match={{...}} staticContext={[undefined]} habits={{...}} getHabits={[Function: getHabits]}>
                  <div className=\\"Connect(HabitsPage)-root-1\\">
                    <WithStyles(HabitsHeader)>
                      <HabitsHeader classes={{...}}>
                        <div className=\\"HabitsHeader-root-2\\">
                          <h4 className=\\"HabitsHeader-title-3\\">
                            My Habits
                          </h4>
                        </div>
                      </HabitsHeader>
                    </WithStyles(HabitsHeader)>
                  </div>
                </HabitsPage>
              </Connect(HabitsPage)>
            </WithStyles(undefined)>
          </Route>
          <Route path=\\"/habit/create\\" component={{...}} />
          <Route path=\\"/habit/update/id\\" component={{...}} />
        </HabitsRouter>
      </Route>
    </Router>
  </MemoryRouter>
</Provider>"
`;

exports[`Match snapshot 2`] = `
"<Provider store={{...}}>
  <MemoryRouter initialEntries={{...}}>
    <Router history={{...}}>
      <Route component={[Function: HabitsRouter]}>
        <HabitsRouter history={{...}} location={{...}} match={{...}} staticContext={[undefined]}>
          <Route component={{...}}>
            <WithStyles(undefined) history={{...}} location={{...}} match={{...}} staticContext={[undefined]}>
              <Connect(HabitsPage) classes={{...}} history={{...}} location={{...}} match={{...}} staticContext={[undefined]}>
                <HabitsPage classes={{...}} history={{...}} location={{...}} match={{...}} staticContext={[undefined]} habits={{...}} getHabits={[Function: getHabits]}>
                  <div className=\\"Connect(HabitsPage)-root-1\\">
                    <WithStyles(HabitsHeader)>
                      <HabitsHeader classes={{...}}>
                        <div className=\\"HabitsHeader-root-2\\">
                          <h4 className=\\"HabitsHeader-title-3\\">
                            My Habits
                          </h4>
                        </div>
                      </HabitsHeader>
                    </WithStyles(HabitsHeader)>
                  </div>
                </HabitsPage>
              </Connect(HabitsPage)>
            </WithStyles(undefined)>
          </Route>
          <Route path=\\"/habit/create\\" component={{...}}>
            <WithStyles(HabitCreate) history={{...}} location={{...}} match={{...}} staticContext={[undefined]}>
              <HabitCreate classes={{...}} history={{...}} location={{...}} match={{...}} staticContext={[undefined]}>
                <div className=\\"HabitCreate-root-4\\">
                  HabitCreate Component
                </div>
              </HabitCreate>
            </WithStyles(HabitCreate)>
          </Route>
          <Route path=\\"/habit/update/id\\" component={{...}} />
        </HabitsRouter>
      </Route>
    </Router>
  </MemoryRouter>
</Provider>"
`;
